--- a/Exploro/src/app/login/login.page.scss
+++ b/Exploro/src/app/login/login.page.scss
@@ -5,15 +5,15 @@ ion-item::part(native) {
 ion-list{
   background-color: #1e1e1e;
 }
-div{
-  height: 40%;
-  position: relative;
-  top:30%
+
+ion-card{
+  background-color: #1e1e1e;
 }
 form{
   height: 100%;
   background-color:  #1e1e1e;
 }
+
 
 
 
