--- a/Exploro/src/app/login/login.page.html
+++ b/Exploro/src/app/login/login.page.html
@@ -1,10 +1,7 @@
 
 
 <ion-content color="secondary">
-  <div>
-    <ion-grid>
-      <ion-row >
-        <ion-col size="4" offset="4">
+  <div id="d1">
           <ion-card>
             <form #f="ngForm">
               <ion-list>
@@ -19,11 +16,8 @@
               </ion-list>
               <ion-button   expand="block" color="primary" type="submit">Login</ion-button>
             </form>
-            <ion-button  style="--background:red" expand="block" >Registrati</ion-button>
+              <ion-button id="b2" style="--background:red" expand="block" >Registrati</ion-button>
           </ion-card>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
   </div>
 
 
