--- a/Exploro/src/app/login/login.page.html
+++ b/Exploro/src/app/login/login.page.html
@@ -1,23 +1,35 @@
 
 
-<ion-content color="secondary">
+<ion-content color="tertiary">
   <div id="d1">
-          <ion-card>
-            <form #f="ngForm">
-              <ion-list>
-                <ion-item >
-                  <ion-label position="floating">Username</ion-label>
-                  <ion-input type="text" color="light"></ion-input>
-                </ion-item>
-                <ion-item>
-                  <ion-label position="floating">Password</ion-label>
-                  <ion-input  type="password" color="light"></ion-input>
-                </ion-item>
-              </ion-list>
-              <ion-button   expand="block" color="primary" type="submit">Login</ion-button>
-            </form>
-              <ion-button id="b2" style="--background:red" expand="block" >Registrati</ion-button>
-          </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <div id="d2">
+          <div id="d3">
+            <ion-avatar>
+              <img alt="logo" src="../assets/icon/logo.PNG">
+            </ion-avatar>
+          </div>
+        </div>
+      </ion-card-header>
+      <ion-card-content>
+        <form #f="ngForm">
+          <ion-list>
+            <ion-item >
+              <ion-label position="floating">Username</ion-label>
+              <ion-input type="text" color="light"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Password</ion-label>
+              <ion-input  type="password" color="light"></ion-input>
+            </ion-item>
+          </ion-list>
+          <ion-button   expand="block" color="primary" type="submit">Login</ion-button>
+        </form>
+        <ion-button id="b2" color="primary" expand="block" (click)="onRegister()" >Registrati</ion-button>
+      </ion-card-content>
+
+    </ion-card>
   </div>
 
 
