--- a/Exploro/src/app/pages/login/login.page.html
+++ b/Exploro/src/app/pages/login/login.page.html
@@ -1,5 +1,8 @@
-
-
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title style="text-align: center">Login</ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content color="tertiary">
   <div id="d1">
     <ion-card>
@@ -7,7 +10,7 @@
         <div id="d2">
           <div id="d3">
             <ion-avatar>
-              <img alt="logo" src="../assets/icon/logo.PNG">
+              <img alt="logo" src="../assets/icon/logo.PNG" />
             </ion-avatar>
           </div>
         </div>
@@ -15,22 +18,27 @@
       <ion-card-content>
         <form #f="ngForm">
           <ion-list>
-            <ion-item >
+            <ion-item>
               <ion-label position="floating">Username</ion-label>
               <ion-input type="text" color="light"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Password</ion-label>
-              <ion-input  type="password" color="light"></ion-input>
+              <ion-input type="password" color="light"></ion-input>
             </ion-item>
           </ion-list>
-          <ion-button   expand="block" color="primary" type="submit">Login</ion-button>
+          <ion-button expand="block" color="primary" type="submit"
+            >Login</ion-button
+          >
         </form>
-        <ion-button id="b2" color="primary" expand="block" (click)="onRegister()" >Registrati</ion-button>
+        <ion-button
+          id="b2"
+          color="primary"
+          expand="block"
+          routerLink="/registration"
+          >Registrati</ion-button
+        >
       </ion-card-content>
-
     </ion-card>
   </div>
-
-
 </ion-content>
