--- a/Exploro/src/app/pages/registration/registration.page.scss
+++ b/Exploro/src/app/pages/registration/registration.page.scss
@@ -1,50 +1,27 @@
-#d1 {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
 ion-card {
   background-color: #1e1e1e;
-  width: 90vw;
+  width: 70vw;
 }
 
-#d2 {
-  position: relative;
-  height: 100%;
-  width: 100%;
+.logo {
+  display: flex;
+  justify-content: center;
+}
+
+.formRegistration {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-
-}
-
-#d3 {
-  height: 75px;
-  width: 75px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  background-color: #f7bd49;
-  border-radius: 25px;
 }
 
 ion-item::part(native) {
-  background-color: #595959;
+  background-color: #3c3c3c;
 }
 
-
-ion-list {
-  background-color: #1e1e1e;
-}
-
-form {
-  height: 100%;
-  background-color: #1e1e1e;
+ion-avatar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 0 10px rgba(239, 105, 16, 0.5); // aggiunge l'ombra intorno
 }
