--- a/Exploro/src/global.scss
+++ b/Exploro/src/global.scss
@@ -32,3 +32,7 @@ ion-button.button-orange {
 ion-button.button-standard {
   --ion-color-primary: #329aea;
 }
+ion-button.button-back {
+  --ion-color-primary: #1f1f1f;
+  --ion-text-color: white;
+}
