--- a/Exploro/src/app/pages/registration/registration.page.html
+++ b/Exploro/src/app/pages/registration/registration.page.html
@@ -1,8 +1,9 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title style="text-align: center">Registrazione</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-toolbar>
+  <ion-buttons slot="start">
+    <ion-back-button defaultHref="login"></ion-back-button>
+  </ion-buttons>
+  <ion-title>Registrazione</ion-title>
+</ion-toolbar>
 
 <ion-content color="primary">
   <div class="formRegistration">
@@ -56,18 +57,11 @@
             </ion-item>
           </ion-list>
 
-          <ion-button
-            class="button-standard"
-            color="primary"
-            expand="block"
-            type="submit"
+          <ion-button class="button-orange" expand="block" type="submit"
             >Registrati</ion-button
           >
         </form>
-        <ion-button class="button-orange" expand="block" routerLink=""
-          >INDIETRO</ion-button
-        >
-        <!-- queste classi che vedi nei bottoni statto in global.scss -->
+        <!-- queste classi che vedi nei bottoni stanno in global.scss -->
       </ion-card-content>
     </ion-card>
   </div>
