--- a/Exploro/src/theme/variables.scss
+++ b/Exploro/src/theme/variables.scss
@@ -1,6 +1,8 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
 
+/** IMPOSTAZIONI AGGIUNTIVE **/
+
 /** Ionic CSS Variables **/
 :root {
   --ion-color-primary: #f7bd49;
