--- a/Exploro/src/app/pages/registration/registration.page.scss
+++ b/Exploro/src/app/pages/registration/registration.page.scss
@@ -13,6 +13,7 @@ ion-card {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  height: 100vh;
 }
 
 ion-item::part(native) {
