--- a/Exploro/src/app/pages/login/login.page.html
+++ b/Exploro/src/app/pages/login/login.page.html
@@ -4,7 +4,7 @@
 
 <ion-content color="primary">
   <div class="formLogin">
-    <ion-card>
+    <ion-card (click)="onRegister()">
       <ion-card-header>
         <div class="logo">
           <ion-avatar>
