aggiunta mappe google

--- a/Exploro/src/app/pages/login/login.page.html
+++ b/Exploro/src/app/pages/login/login.page.html
@@ -37,7 +37,7 @@
         <ion-button
           class="button-orange"
           expand="block"
-          routerLink="/registration"
+          routerLink="/base-home"
           >Registrati</ion-button
         >
       </ion-card-content>
