--- a/Exploro/src/theme/variables.scss
+++ b/Exploro/src/theme/variables.scss
@@ -164,7 +164,6 @@
     --ion-color-step-850: #d9d9d9;
     --ion-color-step-900: #e6e6e6;
     --ion-color-step-950: #f2f2f2;
-    --ion-color-step-red: red; // serve per i test
 
     --ion-item-background: #000000;
 
@@ -183,7 +182,7 @@
    */
 
   .md body {
-    --ion-background-color: #121212;
+    --ion-background-color: #2f2f2f;
     --ion-background-color-rgb: 18, 18, 18;
 
     --ion-text-color: #ffffff;
