--- a/Exploro/src/app/app.component.html
+++ b/Exploro/src/app/app.component.html
@@ -1,3 +1,39 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu menuId="menu-laterale" contentId="main">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-menu-toggle>
+          <!-- ogni pagina dovrà essere specifica per ogni utente, per il momento boh -->
+          <ion-item routerLink="profilo">
+            <ion-icon name="person"></ion-icon>
+            <ion-label>Profilo</ion-label>
+          </ion-item>
+          <ion-item routerLink="cache">
+            <ion-icon name="briefcase"></ion-icon>
+            <ion-label>Cache</ion-label>
+          </ion-item>
+          <ion-item routerLink="preferiti">
+            <ion-icon name="star"></ion-icon>
+            <ion-label>Preferiti</ion-label>
+          </ion-item>
+          <ion-item routerLink="classifica">
+            <ion-icon name="bar-chart"></ion-icon>
+            <ion-label>Classifica</ion-label>
+          </ion-item>
+          <!-- al momento ho impostato il logout così perché non ho idea di come verranno gestiti gli accessi -->
+          <ion-item routerLink="/login">
+            <ion-icon name="log-out"></ion-icon>
+            <ion-label>Logout</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
