--- a/Exploro/src/app/pages/base-home/base-home.page.html
+++ b/Exploro/src/app/pages/base-home/base-home.page.html
@@ -1,9 +1,11 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>base-home</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-toolbar>
+  <ion-buttons slot="start">
+    <ion-back-button defaultHref="login"></ion-back-button>
+  </ion-buttons>
+  <ion-title>base-home</ion-title>
+</ion-toolbar>
 
 <ion-content [fullscreen]="true">
-  <app-map></app-map>
+  <!-- <app-map></app-map>  -->
+  <!-- anche questa parte ho dovuto commentare, non sto capendo perché non può "esistere" in due pagine diverse -->
 </ion-content>
