--- a/Exploro/src/app/pages/login/login.page.html
+++ b/Exploro/src/app/pages/login/login.page.html
@@ -1,10 +1,10 @@
 <ion-toolbar>
-  <ion-title style="text-align: center">Login</ion-title>
+  <ion-title>Login</ion-title>
 </ion-toolbar>
 
-<ion-content color="primary">
+<ion-content>
   <div class="formLogin">
-    <ion-card (click)="onRegister()">
+    <ion-card>
       <ion-card-header>
         <div class="logo">
           <ion-avatar>
@@ -13,32 +13,45 @@
         </div>
       </ion-card-header>
       <ion-card-content>
-        <form #f="ngForm">
+        <form #formLogin="ngForm">
           <ion-list>
             <ion-item>
               <ion-label position="floating">E-mail</ion-label>
               <ion-input
-                mode="ios"
                 name="email"
                 type="text"
+                [(ngModel)]="email"
                 required
               ></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Password</ion-label>
-              <ion-input name="password" type="password" required></ion-input>
+              <ion-input
+                name="password"
+                type="password"
+                [(ngModel)]="password"
+                required
+              ></ion-input>
             </ion-item>
           </ion-list>
 
-          <ion-button class="button-orange" expand="block" type="submit"
+          <ion-button
+            class="button-orange"
+            expand="block"
+            type="submit"
+            (click)="Login()"
             >Login</ion-button
           >
+          <!-- nelle proprietà del bottone Login aggiungere: [disabled]="!formLogin.valid" -->
         </form>
         <ion-button
           class="button-orange"
           expand="block"
-          routerLink="/base-home"
+          routerLink="/registration"
           >Registrati</ion-button
+        >
+        <ion-button class="button-orange" expand="block" routerLink="/base-home"
+          >Mappa</ion-button
         >
       </ion-card-content>
     </ion-card>
