--- a/Exploro/src/app/pages/profilo/profilo.page.html
+++ b/Exploro/src/app/pages/profilo/profilo.page.html
@@ -1,13 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>profilo</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">profilo</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+<ion-toolbar>
+  <ion-menu-button slot="start" menu="menu-laterale"> </ion-menu-button>
+  <ion-title>Profilo</ion-title>
+</ion-toolbar>
