--- a/Exploro/src/app/pages/homepage/homepage.page.html
+++ b/Exploro/src/app/pages/homepage/homepage.page.html
@@ -4,5 +4,8 @@
 </ion-toolbar>
 
 <ion-content>
+  <ion-item>
+    <ion-label position="absolute"> scrivi qualcosa </ion-label>
+  </ion-item>
   <app-map></app-map>
 </ion-content>
