--- a/Exploro/src/app/pages/profilo/profilo.page.html
+++ b/Exploro/src/app/pages/profilo/profilo.page.html
@@ -2,3 +2,44 @@
   <ion-menu-button slot="start" menu="menu-laterale"> </ion-menu-button>
   <ion-title>Profilo</ion-title>
 </ion-toolbar>
+
+<ion-content>
+  <ion-item lines="none">
+    <ion-label style="float: left; font-size: 1.1em">Nome Cognome</ion-label>
+    <ion-label style="float: right; text-align: right; font-size: 1.1em"
+      >LIV. 11</ion-label
+    >
+  </ion-item>
+
+  <ion-item lines="none">
+    <p>0</p>
+    <ion-progress-bar value=".48" color="warning"></ion-progress-bar>
+    <p>100</p>
+  </ion-item>
+
+  <ion-label class="dati-personali">Dati personali:</ion-label>
+
+  <div>
+    <ion-item>
+      <ion-label>Username</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Password</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Email</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Cellulare</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Data di nascita</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Livello</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Punti Exp</ion-label>
+    </ion-item>
+  </div>
+</ion-content>
