--- a/Exploro/src/app/pages/login/login.page.scss
+++ b/Exploro/src/app/pages/login/login.page.scss
@@ -5,3 +5,16 @@
   justify-content: center;
   height: 100vh;
 }
+
+ion-avatar {
+  width: 110px;
+  height: 110px;
+}
+
+.errore {
+  color: #ff4242;
+  position: absolute;
+  bottom: -10px; /* controlla la distanza tra la card e la label */
+  left: 50%;
+  transform: translateX(-50%);
+}
