--- a/Exploro/src/app/pages/profilo/profilo.page.html
+++ b/Exploro/src/app/pages/profilo/profilo.page.html
@@ -1,14 +1,22 @@
 <ion-toolbar>
-  <ion-menu-button slot="start" menu="menu-laterale"> </ion-menu-button>
+  <ion-menu-button slot="start" menu="menu-laterale"></ion-menu-button>
   <ion-title>Profilo</ion-title>
+  <ion-icon
+    name="home"
+    slot="end"
+    class="torna-home"
+    routerLink="/homepage"
+  ></ion-icon>
 </ion-toolbar>
 
 <ion-content>
   <ion-item lines="none">
-    <ion-label style="float: left; font-size: 1.1em">Nome Cognome</ion-label>
-    <ion-label style="float: right; text-align: right; font-size: 1.1em"
-      >LIV. 11</ion-label
+    <ion-label style="float: left; font-size: 1.1em"
+      >{{geocacher.nome}} {{geocacher.cognome}}</ion-label
     >
+    <ion-label style="float: right; text-align: right; font-size: 1.1em"
+      >LIV. {{geocacher.livello}}
+    </ion-label>
   </ion-item>
 
   <ion-item lines="none">
@@ -17,29 +25,52 @@
     <p>100</p>
   </ion-item>
 
-  <ion-label class="dati-personali">Dati personali:</ion-label>
+  <ion-item style="margin-bottom: 20px" lines="none">
+    <ion-label class="dati-personali">Dati personali:</ion-label>
+  </ion-item>
 
   <div>
-    <ion-item>
-      <ion-label>Username</ion-label>
+    <ion-item lines="none" class="ion-align-items-center">
+      <ion-label style="flex: 0 0 42%">Nome:</ion-label>
+      <ion-label style="flex: 1">{{geocacher.nome}}</ion-label>
     </ion-item>
-    <ion-item>
-      <ion-label>Password</ion-label>
+
+    <ion-item lines="none" class="ion-align-items-center">
+      <ion-label style="flex: 0 0 42%">Cognome:</ion-label>
+      <ion-label style="flex: 1">{{geocacher.cognome}}</ion-label>
     </ion-item>
-    <ion-item>
-      <ion-label>Email</ion-label>
+
+    <ion-item lines="none" class="ion-align-items-center">
+      <ion-label style="flex: 0 0 42%">Username:</ion-label>
+      <ion-label style="flex: 1">{{geocacher.username}}</ion-label>
     </ion-item>
-    <ion-item>
-      <ion-label>Cellulare</ion-label>
+
+    <ion-item lines="none" class="ion-align-items-center">
+      <ion-label style="flex: 0 0 42%">Password:</ion-label>
+      <ion-label style="flex: 1">{{geocacher.password}}</ion-label>
     </ion-item>
-    <ion-item>
-      <ion-label>Data di nascita</ion-label>
+
+    <ion-item lines="none" class="ion-align-items-center">
+      <ion-label style="flex: 0 0 42%">Email:</ion-label>
+      <ion-label style="flex: 1">{{geocacher.mail}}</ion-label>
     </ion-item>
-    <ion-item>
-      <ion-label>Livello</ion-label>
+
+    <ion-item lines="none" class="ion-align-items-center">
+      <ion-label style="flex: 0 0 42%">Cellulare:</ion-label>
+      <ion-label style="flex: 1">{{geocacher.cellulare}}</ion-label>
     </ion-item>
-    <ion-item>
-      <ion-label>Punti Exp</ion-label>
+
+    <ion-item lines="none" class="ion-align-items-center">
+      <ion-label style="flex: 0 0 42%">Data di nascita:</ion-label>
+      <ion-label style="flex: 1"
+        >{{ formatDate(geocacher.dataDiNascita) }}</ion-label
+      >
     </ion-item>
   </div>
+
+  <p>
+    devo creare una nuova pagina per modificare i dati e centrare il bottone
+    porcoddio non va
+  </p>
+  <ion-button class="button-orange">modifica i dati</ion-button>
 </ion-content>
