--- a/Exploro/src/app/pages/profilo/profilo.page.scss
+++ b/Exploro/src/app/pages/profilo/profilo.page.scss
@@ -3,15 +3,24 @@ p {
 }
 
 ion-label {
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin-bottom: 17px;
+  margin-top: 17;
 }
 
 .dati-personali {
-  font-size: 2em;
-  margin: 30px;
+  font-size: 1.7em;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
 ion-item::part(native) {
   background-color: #2f2f2f;
 } // sarebbe il colore dei campi (nome, cognome, ecc..)
+
+ion-button.button-orange {
+  --ion-color-primary: #eaa932;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 20px;
+  justify-content: center;
+}
