--- a/Exploro/src/global.scss
+++ b/Exploro/src/global.scss
@@ -72,3 +72,9 @@ ion-content {
   height: 100%;
 } // sarebbe tutto il contenuto della pagina
 // commentato perché per il momento funziona tutto correttamente anche senza
+
+.torna-home {
+  height: 25px;
+  width: 25px;
+  margin-right: 15px;
+}
