aler conferma modifica dati

--- a/Exploro/src/app/pages/profilo/profilo.page.html
+++ b/Exploro/src/app/pages/profilo/profilo.page.html
@@ -64,9 +64,9 @@
 
     <ion-item lines="none" class="ion-align-items-center">
       <ion-label style="flex: 0 0 42%">Data di nascita:</ion-label>
-      <ion-label style="flex: 1"
-        >{{ formatDate(geocacher.dataDiNascita) }}</ion-label
-      >
+      <!-- <ion-label style="flex: 1"
+        >{{ util.formatDate(geocacher.dataDiNascita) }}</ion-label
+      > -->
     </ion-item>
   </div>
 
