--- a/Exploro/src/app/pages/profilo/modifica-dati/modifica-dati.page.html
+++ b/Exploro/src/app/pages/profilo/modifica-dati/modifica-dati.page.html
@@ -9,8 +9,7 @@
   <div class="formModificaDati">
     <ion-card>
       <ion-card-content>
-        <form #registrazioneForm="ngForm" (ngSubmit)="Conferma()">
-          <!-- nel metodo Conferma() ci va passato qualcosa -->
+        <form #formModificaDati="ngForm" (submit)="Conferma(formModificaDati)">
           <ion-list>
             <ion-item>
               <ion-label style="flex: 0 0 50%">Nome:</ion-label>
@@ -19,6 +18,7 @@
                 type="text"
                 style="flex: 1"
                 required
+                [(ngModel)]="nuoviDati.nome"
               ></ion-input>
             </ion-item>
 
@@ -29,6 +29,7 @@
                 type="text"
                 style="flex: 1"
                 required
+                [(ngModel)]="nuoviDati.cognome"
               ></ion-input>
             </ion-item>
 
@@ -39,6 +40,7 @@
                 type="text"
                 style="flex: 1"
                 required
+                [(ngModel)]="nuoviDati.username"
               ></ion-input>
             </ion-item>
 
@@ -49,6 +51,7 @@
                 type="text"
                 style="flex: 1"
                 required
+                [(ngModel)]="nuoviDati.mail"
               ></ion-input>
             </ion-item>
 
@@ -59,6 +62,7 @@
                 type="text"
                 style="flex: 1"
                 required
+                [(ngModel)]="nuoviDati.cellulare"
               ></ion-input>
             </ion-item>
 
@@ -66,34 +70,41 @@
               <ion-label style="flex: 0 0 50%">Data di nascita:</ion-label>
               <ion-input
                 name="dataDiNascita"
-                type="date"
+                type="Date"
                 style="flex: 1"
                 required
+                [(ngModel)]="nuoviDati.dataDiNascita"
               ></ion-input>
             </ion-item>
 
-            <ion-item>
+            <ion-item style="margin-top: 15px">
               <ion-label style="flex: 0 0 50%">Password:</ion-label>
               <ion-input
                 name="password"
-                type="text"
+                type="password"
                 style="flex: 1"
                 required
+                [(ngModel)]="nuoviDati.password"
               ></ion-input>
             </ion-item>
 
             <ion-item>
               <ion-label style="flex: 0 0 50%">Conferma password:</ion-label>
               <ion-input
-                name="confermaPassword"
-                type="text"
+                name="confermaNuovaPassword"
+                type="password"
                 style="flex: 1"
                 required
+                [(ngModel)]="confermaNuovaPassword"
               ></ion-input>
             </ion-item>
           </ion-list>
 
-          <ion-button class="button-standard" expand="block" type="submit"
+          <ion-button
+            class="button-standard"
+            expand="block"
+            type="submit"
+            [disabled]="!formModificaDati.valid"
             >CONFERMA</ion-button
           >
         </form>
@@ -103,4 +114,12 @@
       </ion-card-content>
     </ion-card>
   </div>
+  <ion-alert
+    class="lallero"
+    [isOpen]="isAlertOpen"
+    trigger="present-alert"
+    [buttons]="alertButtons"
+    header="Inserisci la vecchia password per confermare"
+    [inputs]="alertInputs"
+  ></ion-alert>
 </ion-content>
