--- a/Exploro/src/app/pages/profilo/profilo.page.html
+++ b/Exploro/src/app/pages/profilo/profilo.page.html
@@ -9,16 +9,14 @@
   ></ion-icon>
 </ion-toolbar>
 
-<!-- tutte le cose commentate sono temporanee, altrimenti ogni volta che salvo smi sminchia perché perde i dati memorizzati -->
-
 <ion-content>
   <ion-item lines="none">
-    <!-- <ion-label style="float: left; font-size: 1.1em"
+    <ion-label style="float: left; font-size: 1.1em"
       >{{geocacher.nome}} {{geocacher.cognome}}</ion-label
-    > -->
-    <!-- <ion-label style="float: right; text-align: right; font-size: 1.1em"
+    >
+    <ion-label style="float: right; text-align: right; font-size: 1.1em"
       >LIV. {{geocacher.livello}}
-    </ion-label> -->
+    </ion-label>
   </ion-item>
 
   <ion-item lines="none">
@@ -34,39 +32,39 @@
   <div style="margin-left: 10px">
     <ion-item lines="none" class="ion-align-items-center">
       <ion-label style="flex: 0 0 42%">Nome:</ion-label>
-      <!-- <ion-label style="flex: 1">{{geocacher.nome}}</ion-label> -->
+      <ion-label style="flex: 1">{{geocacher.nome}}</ion-label>
     </ion-item>
 
     <ion-item lines="none" class="ion-align-items-center">
       <ion-label style="flex: 0 0 42%">Cognome:</ion-label>
-      <!-- <ion-label style="flex: 1">{{geocacher.cognome}}</ion-label> -->
+      <ion-label style="flex: 1">{{geocacher.cognome}}</ion-label>
     </ion-item>
 
     <ion-item lines="none" class="ion-align-items-center">
       <ion-label style="flex: 0 0 42%">Username:</ion-label>
-      <!-- <ion-label style="flex: 1">{{geocacher.username}}</ion-label> -->
+      <ion-label style="flex: 1">{{geocacher.username}}</ion-label>
     </ion-item>
 
     <ion-item lines="none" class="ion-align-items-center">
       <ion-label style="flex: 0 0 42%">Password:</ion-label>
-      <!-- <ion-label style="flex: 1">{{geocacher.password}}</ion-label> -->
+      <ion-label style="flex: 1">{{geocacher.password}}</ion-label>
     </ion-item>
 
     <ion-item lines="none" class="ion-align-items-center">
       <ion-label style="flex: 0 0 42%">Email:</ion-label>
-      <!-- <ion-label style="flex: 1">{{geocacher.mail}}</ion-label> -->
+      <ion-label style="flex: 1">{{geocacher.mail}}</ion-label>
     </ion-item>
 
     <ion-item lines="none" class="ion-align-items-center">
       <ion-label style="flex: 0 0 42%">Cellulare:</ion-label>
-      <!-- <ion-label style="flex: 1">{{geocacher.cellulare}}</ion-label> -->
+      <ion-label style="flex: 1">{{geocacher.cellulare}}</ion-label>
     </ion-item>
 
     <ion-item lines="none" class="ion-align-items-center">
       <ion-label style="flex: 0 0 42%">Data di nascita:</ion-label>
-      <!-- <ion-label style="flex: 1"
+      <ion-label style="flex: 1"
         >{{ util.formatDate(geocacher.dataDiNascita) }}</ion-label
-      > -->
+      >
     </ion-item>
   </div>
 
