--- a/Exploro/src/app/pages/profilo/modifica-dati/modifica-dati.page.html
+++ b/Exploro/src/app/pages/profilo/modifica-dati/modifica-dati.page.html
@@ -116,8 +116,8 @@
   </div>
   <ion-alert
     trigger="present-alert"
-    header="Password non corretta"
-    message="la password inserita non corrisponde alla vecchia password"
+    header="{{headerAlert}}"
+    message="{{messageAlert}}"
     [buttons]="alertButtons"
     isOpen="{{isAlertOpen}}"
   ></ion-alert>
