--- a/Exploro/src/app/app.component.html
+++ b/Exploro/src/app/app.component.html
@@ -31,7 +31,7 @@
           <!-- al momento ho impostato il logout così perché non ho idea di come verranno gestiti gli accessi -->
           <!-- il logout necessita di un metodo che azzera i parametri di Session per una questione di sicurezza
           altrimenti basta cambiare l'URL per accedere alla sezione personale dell'utente che aveva fatto l'accesso -->
-          <ion-item routerLink="/login">
+          <ion-item routerLink="/login" (click)="Logout()">
             <ion-icon name="log-out"></ion-icon>
             <ion-label>Logout</ion-label>
           </ion-item>
