--- a/Exploro/src/app/pages/homepage/homepage.page.scss
+++ b/Exploro/src/app/pages/homepage/homepage.page.scss
@@ -1,3 +1,19 @@
 ion-item {
   position: "absolute";
 }
+
+// ion-range {
+//   --bar-background: #eaaa3253;
+//   --bar-background-active: #eaa932;
+//   --bar-height: 3px;
+//   --bar-border-radius: 8px;
+//   --knob-background: #ffffff;
+//   --knob-size: 20px;
+//   --pin-background: #434343;
+//   --pin-color: #ffffff;
+// }
+// <ion-range
+//   aria-label="Range with pin"
+//   [pin]="true"
+//   [pinFormatter]="pinFormatter"
+// ></ion-range>
