--- a/Exploro/src/app/pages/homepage/homepage.page.scss
+++ b/Exploro/src/app/pages/homepage/homepage.page.scss
@@ -16,3 +16,15 @@ ion-range {
 ion-searchbar {
   --cancel-button-color: #fa3232;
 }
+.map {
+  // position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: transparent;
+  opacity: 0;
+  transition: opacity 150ms ease-in;
+}
+
+.map.visible {
+  opacity: 1;
+}
