avanzamento sezione Admin + registrazione quasi completata al 100%, manca qualche controllo

--- a/Exploro/src/app/pages/admin/admin.page.html
+++ b/Exploro/src/app/pages/admin/admin.page.html
@@ -1,5 +1,11 @@
 <ion-toolbar>
   <ion-title>Area amministratore</ion-title>
+  <ion-icon
+    name="log-out"
+    slot="end"
+    routerLink=""
+    class="torna-home"
+  ></ion-icon>
 </ion-toolbar>
 
 <ion-content>
