--- a/Exploro/src/app/pages/admin/lista-cache/lista-cache.page.html
+++ b/Exploro/src/app/pages/admin/lista-cache/lista-cache.page.html
@@ -4,3 +4,26 @@
   </ion-buttons>
   <ion-title>Lista Cache</ion-title>
 </ion-toolbar>
+
+<ion-content>
+  <ion-searchbar
+    mode="ios"
+    animated="true"
+    placeholder="Animated"
+    [debounce]="500"
+    (ionInput)="FiltraRisultati($event)"
+  ></ion-searchbar>
+
+  <ion-list>
+    <ion-item
+      *ngFor="let cache of listaCacheFiltrate"
+      (click)="ScegliCache(cache)"
+    >
+      <ion-label>
+        <h2>{{cache.nome}}</h2>
+        <p>{{cache.descrizione}}</p>
+        <p>Difficoltà: {{cache.difficolta}}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
