--- a/Exploro/src/app/pages/admin/utenti-registrati/utenti-registrati.page.html
+++ b/Exploro/src/app/pages/admin/utenti-registrati/utenti-registrati.page.html
@@ -15,10 +15,12 @@
   ></ion-searchbar>
 
   <ion-list>
-    <ion-item *ngFor="let utente of listaUtenti" (click)="ScegliUtente(utente)">
+    <ion-item
+      *ngFor="let utente of listaUtentiFiltrata"
+      (click)="ScegliUtente(utente)"
+    >
       <ion-label>{{ utente.nome }} {{ utente.cognome }}</ion-label>
+      <ion-icon name="eye" slot="end"></ion-icon>
     </ion-item>
   </ion-list>
 </ion-content>
-
-<app-schedautente></app-schedautente>
