--- a/Exploro/src/global.scss
+++ b/Exploro/src/global.scss
@@ -77,3 +77,7 @@ ion-content {
   width: 25px;
   margin-right: 15px;
 }
+.alert-wrapper.sc-ion-alert-md{
+  background-color: #eaa932;
+  border-radius: 15px;
+}
