piccolo bug risolto

--- a/Exploro/src/app/pages/homepage/homepage.page.html
+++ b/Exploro/src/app/pages/homepage/homepage.page.html
@@ -13,10 +13,10 @@
     Ricerca rapida
   </ion-button>
 
-  <ion-button style="flex: 1 0 13%" id="apri-filtri"
+  <ion-button style="flex: 1 0 13%" id="filtri-homepage"
     >Filtri
     <ion-icon name="options" style="margin-left: 5px"></ion-icon>
-    <ion-popover trigger="apri-filtri" triggerAction="click">
+    <ion-popover trigger="filtri-homepage" triggerAction="click">
       <ng-template>
         <ion-list>
           <ion-item>
