colori dell'app sistemati

--- a/Exploro/src/app/pages/login/login.page.html
+++ b/Exploro/src/app/pages/login/login.page.html
@@ -52,6 +52,6 @@
       </ion-card-content>
     </ion-card>
     <br />
-    <ion-label class="errore">{{labelErrore}}</ion-label>
+    <ion-label class="errore" color="danger">{{labelErrore}}</ion-label>
   </div>
 </ion-content>
