--- a/Exploro/src/app/app.component.scss
+++ b/Exploro/src/app/app.component.scss
@@ -5,7 +5,7 @@ ion-item {
 ion-icon {
   font-size: 1.8em;
   color: #eaa932;
-}
+} //colore delle icone nel menu laterale
 
 ion-item ion-icon {
   --ion-justify-content-end: 10px;
