--- a/Exploro/src/app/pages/homepage/homepage.page.html
+++ b/Exploro/src/app/pages/homepage/homepage.page.html
@@ -46,21 +46,6 @@
       </ng-template>
     </ion-popover>
   </ion-button>
-
-  <!-- <ion-button style="width: 49%;" id="buttonFilterSelector" (click)="displayCheckBox()">
-      Filtro: tutte le cache
-    </ion-button>
-  </div>
-  <div style="position: absolute;background-color:#2f2f2f;width: 50%;height: 11%;
-              display: none;flex-direction: column; left: 50%;z-index: 3; align-items:start;
-              border-bottom-left-radius: 20px; "
-              id ="divCheckBox">
-    <ion-checkbox labelPlacement="end" style="font-size: 25px;margin-left: 4%;"
-      (click)="checkSelezionato(1)" id="filterCheckBox1">tutte le cache</ion-checkbox>
-    <ion-checkbox labelPlacement="end" style="font-size: 25px;margin-left: 4%;"
-      (click)="checkSelezionato(2)" id="filterCheckBox2">solo cache trovate</ion-checkbox>
-    <ion-checkbox labelPlacement="end" style="font-size: 25px;margin-left: 4%;"
-      (click)="checkSelezionato(3)" id="filterCheckBox3">solo cache non trovate</ion-checkbox> -->
 </div>
 
 <ion-modal
@@ -72,6 +57,7 @@
   <ng-template>
     <ion-content>
       <ion-searchbar
+        mode="ios"
         style="display: inline-block"
         animated="true"
         placeholder="Cerca una cache"
