--- a/Exploro/src/global.scss
+++ b/Exploro/src/global.scss
@@ -44,7 +44,7 @@ ion-title {
 }
 
 ion-card {
-  background-color: #1e1e1e;
+  // background-color: #1e1e1e;
   width: 75%;
 } // proprietà della card
 
@@ -54,7 +54,7 @@ ion-card {
 }
 
 ion-item::part(native) {
-  background-color: #3c3c3c;
+  // background-color: #3c3c3c;
 } // sarebbe il colore dei campi (nome, cognome, ecc..)
 
 ion-avatar {
@@ -77,7 +77,7 @@ ion-content {
   width: 25px;
   margin-right: 15px;
 }
-.alert-wrapper.sc-ion-alert-md{
-  background-color: #eaa932;
+.alert-wrapper.sc-ion-alert-md {
+  // background-color: #eaa932;
   border-radius: 15px;
 }
