--- a/Exploro/src/theme/variables.scss
+++ b/Exploro/src/theme/variables.scss
@@ -5,12 +5,12 @@
 
 /** Ionic CSS Variables **/
 :root {
-  --ion-color-primary: #f7bd49;
+  --ion-color-primary: #e6e6e6;
   --ion-color-primary-rgb: 247, 189, 73;
   --ion-color-primary-contrast: #000000;
   --ion-color-primary-contrast-rgb: 0, 0, 0;
-  --ion-color-primary-shade: #d9a640;
-  --ion-color-primary-tint: #f8c45b;
+  --ion-color-primary-shade: #717171;
+  --ion-color-primary-tint: #262626;
 
   --ion-color-secondary: #1e1e1e;
   --ion-color-secondary-rgb: 30, 30, 30;
