--- a/Exploro/src/app/pages/profilo/profilo.page.scss
+++ b/Exploro/src/app/pages/profilo/profilo.page.scss
@@ -22,3 +22,11 @@ ion-button.button-orange {
   max-width: 200px;
   margin-bottom: 15px;
 }
+
+// .bottom-button {
+//   position: fixed;
+//   bottom: 0;
+//   left: 50%;
+//   transform: translateX(-50%);
+//   margin-bottom: 15px;
+// }
