--- a/Exploro/src/theme/variables.scss
+++ b/Exploro/src/theme/variables.scss
@@ -182,11 +182,11 @@
    */
 
   .md body {
-    --ion-background-color: #2f2f2f;
-    --ion-background-color-rgb: 18, 18, 18;
+    --ion-background-color: #353535;
+    --ion-background-color-rgb: #353535;
 
     --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255, 255, 255;
+    --ion-text-color-rgb: #ffffff;
 
     --ion-border-color: #222222;
 
@@ -210,9 +210,9 @@
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
-    --ion-item-background: #1e1e1e;
+    --ion-item-background: #353535;
 
-    --ion-toolbar-background: #1f1f1f;
+    --ion-toolbar-background: #212121;
 
     --ion-tab-bar-background: #1f1f1f;
 
