--- a/Exploro/src/global.scss
+++ b/Exploro/src/global.scss
@@ -76,3 +76,7 @@ ion-content {
   background-color: #eaa932;
   border-radius: 15px;
 }
+.alert-checkbox-label.sc-ion-alert-md{
+  color: black;
+    font-family: fantasy;
+}
