aggiustamenti qua e la

--- a/Exploro/src/app/pages/admin/utenti-registrati/utenti-registrati.page.html
+++ b/Exploro/src/app/pages/admin/utenti-registrati/utenti-registrati.page.html
@@ -9,7 +9,7 @@
   <ion-searchbar
     mode="ios"
     animated="true"
-    placeholder="Animated"
+    placeholder="Cerca utente:"
     [debounce]="500"
     (ionInput)="FiltraRisultati($event)"
   ></ion-searchbar>
