--- a/Exploro/src/app/pages/admin/lista-cache/lista-cache.page.html
+++ b/Exploro/src/app/pages/admin/lista-cache/lista-cache.page.html
@@ -9,16 +9,13 @@
   <ion-searchbar
     mode="ios"
     animated="true"
-    placeholder="Animated"
+    placeholder="Cerca cache:"
     [debounce]="500"
     (ionInput)="FiltraRisultati($event)"
   ></ion-searchbar>
 
   <ion-list>
-    <ion-item
-      *ngFor="let cache of listaCacheFiltrate"
-      (click)="ScegliCache(cache)"
-    >
+    <ion-item *ngFor="let cache of listaCacheFiltrate; let i = index">
       <ion-label>
         <h2>{{cache.nome}}</h2>
         <p>{{cache.descrizione}}</p>
