--- a/Exploro/src/app/pages/admin/utenti-registrati/scheda-utente/scheda-utente.page.scss
+++ b/Exploro/src/app/pages/admin/utenti-registrati/scheda-utente/scheda-utente.page.scss
@@ -1,16 +1,24 @@
-.formModificaDati {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  height: 90vh;
-}
-
 ion-card {
-  width: 100%;
+  width: 90%;
   box-shadow: 0 0 5px #ff7d1a;
 } // proprietà della card
 
 ion-label {
   font-size: 1em;
+}
+
+ion-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+#feed-utente {
+  margin-top: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
