sistemazione qualche bug

--- a/Exploro/src/app/pages/classifica/dettagli-utente/dettagli-utente.page.html
+++ b/Exploro/src/app/pages/classifica/dettagli-utente/dettagli-utente.page.html
@@ -91,7 +91,7 @@
         margin: 0 auto;
         text-align: center;
       "
-      >Richiesta già inviata</ion-label
+      >Richiesta inviata</ion-label
     >
   </div>
 </ion-content>
